--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Info form</h1>
 
-        <form action="">
+        <form action="https://api.sheetmonkey.io/form/msrdi7t43SpLL4zyYELT48" method="POST">
             <label>Your Name</label><br>
             <input type="text"is="username" name="username"><br><br>
             
