--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <option value="Brown">Brown</option>
              </select> 
             <h4>What are you doing this weekend?</h4><br>
-            <textArea name="animal" rows="10" cols="30"></textArea><br><br>
+            <textArea name="weekend" rows="10" cols="30"></textArea><br><br>
             <label for="birthday">Birthday:</label><br>
             <input type="date" id="birthday" name="birthday"><br><br>
              <input type="submit" value ="Submit">
